# polartableone

./: CHANGELOG.md  README.md  pyproject.toml  tableone.ipynb
src/polartableone/: __init__.py  tableone.py
tests/: test_dataset_compare.py  test_params.py
tests/datasets/: pbc.csv  rhc.csv
tests/expected/: iris-noarg.csv  iris-tests.csv  pbc-noarg.csv  pbc-tests.csv  pn2012-groupby.csv  pn2012-noarg.csv  pn2012-tests.csv  rhc-noarg.csv  rhc-tests.csv
