[project]
name = "polartableone"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "great-tables>=0.20.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "polars>=1.36.1",
    "pytest>=9.0.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tabulate>=0.9.0",
    "xlsxwriter>=3.2.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = 'src'

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
