[project]
name = "polartableone"
version = "0.1.1"
description = "A polars-based implementation of the `tableone` library for generating summary statistics tables, often referred to as a 'Table 1'."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "dcronkite", email = "dcronkite+pypi@gmail.com" }
]
keywords=["table one", "table 1", "statistics", "cohort", "clinical research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "great-tables>=0.20.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "polars>=1.36.1",
    "pytest>=9.0.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tabulate>=0.9.0",
    "xlsxwriter>=3.2.9",
]

[project.urls]
Homepage = "https://github.com/dcronkite/polartableone"
Repository = "https://github.com/dcronkite/polartableone"
Issues = "https://github.com/dcronkite/polartableone/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = 'src'

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
